// TypeScript interface for Sky130InterconnectMux1 parameter protobuf

export interface Sky130InterconnectMux1 {
  num_inputs?: number;
  num_outputs?: number;
  poly_pitch_nm?: number;
  vertical_pitch_nm?: number;
  vertical_offset_nm?: number;
  horizontal_pitch_nm?: number;
  vertical_routing_channel_width_nm?: number;
  power_ground_strap_width_nm?: number;
}
